@startuml
class SelectCleaningJobStaffView <<partial>> {
    +  <<event>> Search : EventHandler? 
    +  <<event>> SelectionChanged : EventHandler? 
    +  <<event>> SortRequested : EventHandler<SortRequestEventArgs>? 
    + SelectCleaningJobStaffView()
    + Theme() : void
    + SetToolTipVisibility() : void
    + SetFont() : void
    + SearchText : string <<get>> <<set>>
    + SetSelectedItemsById(models:IEnumerable<int>) : void
    + DataGridText : string <<get>> <<set>>
    + DisplayItems(items:BindingList<DisplayStaffModel>) : void
    + DisableAll() : void
    + EnableAll() : void
    + CleanUp() : void
}
class "IDisplayView`1"<T> {
}
class "List`1"<T> {
}
Form <|-- SelectCleaningJobStaffView
"IDisplayView`1" "<DisplayStaffModel>" <|-- SelectCleaningJobStaffView
IChildView <|-- SelectCleaningJobStaffView
IThemeable <|-- SelectCleaningJobStaffView
ISelectCleaningJobStaffView <|-- SelectCleaningJobStaffView
SelectCleaningJobStaffView --> "SelectedItems<DisplayStaffModel>" "List`1"
@enduml
